[project]
name = "ninode-service"
version = "0.1.0"
description = "AI-powered system administration service for VPS management and automation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Michael Sieminski", email = "work.michael@pm.me"},
]
license = {text = "MIT"}
keywords = ["vps", "server", "automation", "ai", "devops", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://ninode.com"
Repository = "https://github.com/michaelsieminski/ninode-service"
Issues = "https://github.com/michaelsieminski/ninode-service/issues"

[project.scripts]
ninode-service = "ninode_service.main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
