[project]
name = "ninode-service"
version = "0.1.4"
description = "AI-powered system administration service for VPS management and automation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael Sieminski", email = "work.michael@pm.me"},
]
license = {text = "MIT"}
keywords = ["vps", "server", "automation", "ai", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://ninode.com"
Repository = "https://github.com/michaelsieminski/ninode-service"
Issues = "https://github.com/michaelsieminski/ninode-service/issues"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0"
]

[project.scripts]
ninode-service = "ninode_service:main"
ninode-mcp = "mcp_server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
